--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uploadthing/react": "^6.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.341.0",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
