--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "node-cache": "^5.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
